style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family:Arial, Helvetica, sans-serif;
}

body {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    background: rgb(34, 193, 195);
    background: -moz-linear-gradient(211deg, rgba(34, 193, 195, 1) 0%, rgba(58, 18, 5, 1) 100%);
    background: -webkit-linear-gradient(211deg, rgba(34, 193, 195, 1) 0%, rgba(58, 18, 5, 1) 100%);
    background: linear-gradient(211deg, rgba(34, 193, 195, 1) 0%, rgba(58, 18, 5, 1) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#22c1c3", endColorstr="#3a1205", GradientType=1);
}

.container {
    background: rgb(238, 174, 202);
    background: -moz-radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(8, 71, 145, 1) 100%);
    background: -webkit-radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(8, 71, 145, 1) 100%);
    background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(8, 71, 145, 1) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#eeaeca", endColorstr="#084791", GradientType=1);
    border: 2px solid black;
    width: 500px;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 10px 10px 15px rgb(13, 1, 14);
    
}

h3 {
    text-align: center;
    font-size: 28px;
}

.container .task input {
    width: 79%;
    padding: 12px 15px;
    border-radius: 5px;
    border: none;
    outline: none;
    margin: 20px 2px 20px 11px;
    font-size: 20px;
    text-overflow: hidden;
}

.container .task button {
    width: 15%;
    padding: 15px 15px;
    border-radius: 30px;
    border: none;
    outline: none;
    margin: 20px 0;
    font-weight: 700;
    cursor: pointer;
    background: linear-gradient(to right, #00FFA3, #DC1FFF);
}
.container .list{
    min-height: 100px;
    max-height: 45vh;
    overflow: auto;
}
.container .list .iteam {
    margin: 20px auto;
    padding: 10px 5px 10px 15px;
    border-radius: 5px;
    font-size: 20px;
    display: flex;
    justify-content: space-between;
    background-color: rgba(44, 148, 227, 0.684);
    width: 95%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

i {
    font-size: 23px;
    color: rgb(171, 28, 28);
    cursor: pointer;
}

.iteam>button {
    background-color: transparent;
    border: none;
    outline: none;
    margin:  0 7px ;
}

